--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
             width: 25%;
             margin: 20px auto;
         }
-        .auto:hover img, .auto:focus img{
+        .auto:focus img{
            content: url(auto-03.svg);
         }
-        .home:hover img, .home:focus img{
+       .home:focus img{
            content: url(home-2-03.svg);
         }
-        .vida:hover img, .vida:focus img{
+        .vida:focus img{
            content: url(user-03.svg);
         }
         .box-listpy {
