--- a/index.html
+++ b/index.html
@@ -139,6 +139,20 @@
             border-radius: 0 !important;
             color: #034a51;
         }
+        .box-w{
+             width: 80%;
+            margin: 40px auto;
+        }
+        .box-img{
+            width: 100%;
+            height: 300px;
+            overflow: hidden;
+            margin: 14px 0;
+            background-image: url(auto.jpg);
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+        }
     </style>
 </head>
 <body>
@@ -186,6 +200,33 @@
 <div class="tab-content contepill" id="pills-tabContent">
   <div class="tab-pane fade" id="pills-Invest" role="tabpanel" aria-labelledby="pills-Invest-tab">
     <div class="container">
+        <div class="box-w">
+            <div class="box-img"></div>
+            <br>
+            <p>Lo más importante es cubrir todas las necesidades que se puedan presentar en la vía. Proteger tú patrimonio de cualquier suceso inesperado es indispensable para nosotros por eso permitimos escoger las coberturas que realmente se necesitan, brindando un producto a la medida. <p> 
+<div class="row">
+    <div class="col-sm-6">
+        <p>  ◉ Pérdida total daños <br>
+  ◉ Pérdida parcial daños<br>   
+  ◉ Pérdida total hurto <br>
+ ◉ Pérdida parcial hurto  <br> 
+  ◉ Terremoto   <br>
+  ◉ Gastos de transporte por pérdida total daños o pérdida total  <br>  
+  ◉ Asistencia jurídica en proceso penal</p>
+    </div>
+    <div class="col-sm-6">
+        <p>◉ Asistencia jurídica en proceso civil <br>   
+ ◉ Asistencia en viaje <br> 
+ ◉ Protección patrimonial<br>  
+ ◉ Conductor elegido (5 eventos por vigencia)<br>  
+ ◉ Daño moral (Mediante sentencia Judicial) <br>   
+ ◉ Daño a la vida de relación  <br>
+ ◉ Conductor profesional (vehículos livianos de uso particular)</p>
+    </div>
+</div>
+
+        </div>
+        <br>
         <form class="form1">
             <div class="form-group">
                 <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Nombre">
