--- a/index.html
+++ b/index.html
@@ -224,6 +224,8 @@
  ◉ Conductor profesional (vehículos livianos de uso particular)</p>
     </div>
 </div>
+<br>
+<p>Nos respaldan compañias de primer nivel, para seleccionar la mejor opcion para tus necesidades envianos los siguientes datos y en maximo 48 horas tendras la informacion</p>
 
         </div>
         <br>
