--- a/index.html
+++ b/index.html
@@ -153,6 +153,11 @@
             background-size: cover;
             background-position: center;
         }
+        .icon {
+            position: fixed;
+            right: 15px;
+            bottom: 15px;
+        }
     </style>
 </head>
 <body>
@@ -225,7 +230,7 @@
     </div>
 </div>
 <br>
-<p>Nos respaldan compañias de primer nivel, para seleccionar la mejor opcion para tus necesidades envianos los siguientes datos y en maximo 48 horas tendras la informacion</p>
+<p>Nos respaldan compañias de primer nivel, para seleccionar la mejor opcion para tus necesidades envianos los siguientes datos y en maximo 48 horas tendras la información:</p>
 
         </div>
         <br>
@@ -319,6 +324,7 @@
 </div>
 <div class="lnInt bcol1"></div></section>
 </div>
+<img src="whatsapp.png" class="img-fluid icon">
 
 <!-- Optional JavaScript; choose one of the two! -->
 
